# vttshift

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  vttsnip
.github/workflows/: test.yaml
src/vttshift/: __init__.py  vttshift.py  vttsnip.py
src/vttsnip/: __init__.py
tests/: test_vttshift.py  test_vttsnip.py
