[project]
name = "vttshift"
version = "0.0.1"
authors = [
    { name = "Lucas Werkmeister", email = "mail@lucaswerkmeister.de" },
]
description = "Snip time ranges out of WebVTT files."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "ruff",
]

[tool.mypy]
disallow_untyped_defs = true
files = "."
